# monitor-rs

./: .gitignore  Cargo.toml  Package.swift  README.md  build.sh  cbindgen.toml  install.sh
.cargo/: config.toml
Resources/: Info.plist
Resources/icon/: gen_icon.swift
Sources/MonitorRSApp/: App.swift  AppDelegate.swift  LoginItem.swift  MenuBarController.swift  PopoverView.swift  RustBridge.swift  ViewModel.swift  main.swift
Sources/MonitorRSApp/Components/: CoreGrid.swift  FooterStrip.swift  HeaderStrip.swift  HeroCard.swift  HeroChart.swift  MetricPill.swift  MetricTile.swift  PillsRow.swift  ProcessList.swift  Sparkline.swift
Sources/MonitorRSC/: dummy.c  module.modulemap
Sources/MonitorRSC/include/: monitor_rs.h
Sources/MonitorRSLogic/: HeroSelector.swift  LoadScores.swift  MetricKind.swift  Placeholder.swift
assets/: lsuielement.plist
docs/superpowers/plans/: 2026-05-11-additional-metrics.md  2026-05-11-app-bundle-polish.md  2026-05-11-monitor-rs.md  2026-05-11-popover-hero-redesign.md  2026-05-11-swiftui-popover-redesign.md
docs/superpowers/specs/: 2026-05-11-additional-metrics-design.md  2026-05-11-app-bundle-polish-design.md  2026-05-11-monitor-rs-design.md  2026-05-11-popover-hero-redesign-design.md  2026-05-11-swiftui-popover-redesign.md
examples/: check_cpus.rs  check_gpu.rs  check_interval.rs  list_thermal_sensors.rs
include/: monitor_rs.h
src/: ffi.rs  format.rs  lib.rs  logging.rs  main.rs  sample.rs  sampler.rs  settings.rs  store.rs
src/metrics/: battery.rs  cpu.rs  disk.rs  gpu.rs  mem.rs  mod.rs  net.rs  procs.rs  thermal.rs
src/ui/: cores.rs  mod.rs  popover.rs  procs.rs  sparkline.rs  tray.rs
tests/: gpu_smoke.rs  sampler_smoke.rs
tests/MonitorRSLogicTests/: PlaceholderTests.swift
