[package]
name = "monitor-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "monitor_rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
anyhow = "1.0.102"
directories = "6.0.0"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.39.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"
libloading = "0.9.0"
